--- a/conference/KernelRecipes2019/xdp-netstack-concert.org
+++ b/conference/KernelRecipes2019/xdp-netstack-concert.org
@@ -261,6 +261,20 @@ Drivers could export BTF description
 - BPF prog wanting to use area, must have matching BTF
 - But how can kernel-code use BTF desc and transfer to SKB fields?
 
+* Slide: Fun with xdp_frame before SKB alloc                         :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+After SKB alloc got moved out of drivers
+- What can we now create of crazy stuff?!?
+
+** Slide: New layer with xdp_frame?
+
+Could we update netstack L2 RX-handler to handle xdp_frame packets?
+
+- Bridging
+- Macvlan
 
 * Emacs end-tricks                                                 :noexport:
 
