--- a/conference/KernelRecipes2019/xdp-netstack-concert.org
+++ b/conference/KernelRecipes2019/xdp-netstack-concert.org
@@ -61,7 +61,7 @@ Audience at Kernel Recipes: Other /kernel developers/
 Hopefully you already /heard about XDP/ (eXpress Data Path) */?/* *?* /?/
 - I'll *explain why* network sub-system created this...
 - And /future/ *crazy ideas* to extend XDP
-  - (hopefully) in a way that cooperate more with kernel netstack
+  - (hopefully) in a way that /cooperate more with kernel/ netstack
 
 ** Slide: Why was XDP needed?                                       :export:
 
@@ -112,7 +112,7 @@ Sure, build in /freedom/ for *kernel-bypass via AF_XDP*
 Why is this /better/, than other (bypass) solutions?
 - Flexible /sharing of NIC resources/, NIC still avail to netstack
 - XDP/eBPF prog filters packets using XDP_REDIRECT into AF_XDP socket
-  - Move *selective* frames out of kernel, no need to reinject
+  - Move *selective* frames out of kernel, /no need to reinject/
 - /Leverages existing kernel infrastructure/, eco-system and market position
 
 * Slide: How can XDP be (ab)used?                                    :export:
@@ -131,7 +131,7 @@ XDP speed gains comes from
   - no SKB allocations and no-init (memset zero 4 cache-lines)
 - /Bulk/ processing of frames
 - Very /early access/ to frame (in driver code *after DMA sync*)
-- Ability to /skip/ (large parts) of kernel /code/
+- Ability to */skip/ (large parts) of kernel /code/*
 
 ** Slide: Skipping code: Efficient optimization                     :export:
 
@@ -296,6 +296,9 @@ Likely: Need new L2 RX-handler layer
 - To support kernels evolutionary development model
   - (cannot update every user at once, plus out-of-tree users)
 
+Idea: Use xdp_frame for fast-path e.g. forwarding
+- Fall-back: Create SKB for slow(er) path
+
 *** Users of RX-handler                                          :noexport:
 
 Grep after "netdev_rx_handler_register":
@@ -323,6 +326,8 @@ net/core/failover.c:    err = netdev_rx_handler_register(slave_dev, fops->slave_
 net/hsr/hsr_slave.c:    res = netdev_rx_handler_register(dev, hsr_handle_frame, port);
 net/openvswitch/vport-netdev.c: err = netdev_rx_handler_register(vport->dev, netdev_frame_hook,
 #+end_example
+
+
 
 * Emacs end-tricks                                                 :noexport:
 
