--- a/conference/KernelRecipes2019/xdp-netstack-concert.org
+++ b/conference/KernelRecipes2019/xdp-netstack-concert.org
@@ -340,6 +340,17 @@ net/openvswitch/vport-netdev.c: err = netdev_rx_handler_register(vport->dev, net
 #+end_example
 
 
+
+** Slide: Transport layer XDP                                     :export:
+
+XDP operate at /L2/ (Eth) or /L3/ (IP)
+ - Tom Herbert (coined XDP) proposed [[https://www.spinics.net/lists/netdev/msg407537.html][Transport-layer XDP]] = *L4* (TCP/UDP)
+   - To gain /performance/ it *need* to operate on /xdp_frame/'s
+   - For many fast-path TCP/UDP use-cases, SKB is pure overhead
+     - Much simpler xdp_frame will be sufficient
+     - Let special cases fall-through, alloc+init full SKB
+
+
 * Slide: More practical                                              :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
