areas/arm64: board_espressobin08 initial benchmark notes
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/arm64/board_espressobin08_bench_xdp.org
+++ b/areas/arm64/board_espressobin08_bench_xdp.org
@@ -27,4 +27,11 @@ More stable tree with patches I've tested:
 - https://git.kernel.org/pub/scm/linux/kernel/git/hawk/net-next-xdp.git/
 - xdp_mvneta01
 
+* Initial benchmark notes
 
+#+begin_example
+root@espressobin:~/samples/bpf# ./xdp1 3
+proto 0:     420389 pkt/s
+proto 0:     421554 pkt/s
+proto 0:     421760 pkt/s
+#+end_example
